Profile Editing -Profile page now pulls user data -Added static page for profile edit -Fixed some layout issues with review pages -Added protocols.js enum in preparation for review filter -business.html is now injected into review pages

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-html,
-body {
-    height: 100%;
-}
-
 .star {
     width: 32px;
     height: 32px;
